Hacked a solution to the signup modal issue.  Need to fix this at a later date. Fixed spacing on home page to accomodate strict no overflow

--- a/app/assets/stylesheets/bootstrap-responsive.css
+++ b/app/assets/stylesheets/bootstrap-responsive.css
@@ -1100,13 +1100,3 @@
     padding-left: 10px;
   }
 }
-
-@media (min-width: 980px) {
-  .body {
-    padding-top: 0;
-  }
-  .nav-collapse.collapse {
-    height: auto !important;
-    overflow: visible !important;
-  }
-}
